feat: enhance WebSocket chat functionality with session ID support and logging improvements